2020-10-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* bootstrap.conf: Add `lib-symbol-visibility` module to `libpoke`.
	* libpoke/Makefile.am: Add CPP flags to hide symbols by default.
	* libpoke/libpoke.h: Define `LIBPOKE_API` macro. Mark all public
	functions with `LIBPOKE_API`.
	* libpoke/ios.h: Remove `__attribute__ ((visibility ("hidden")))`.
	* libpoke/pkl-asm.h: Likewise.
	* libpoke/pkl-ast.h: Likewise.
	* libpoke/pkl-diag.h: Likewise.
	* libpoke/pkl-env.h: Likewise.
	* libpoke/pkl-parser.h: Likewise.
	* libpoke/pkl-pass.h: Likewise.
	* libpoke/pkl.h: Likewise.
	* libpoke/pkl-alloc.h: Likewise.
	* libpoke/pvm-program.h: Likewise.
	* libpoke/pvm-val.h: Likewise.
	* libpoke/pvm.h: Likewise.
	* DEV-NEWS: Add relevant notes for devs.

2020-10-25  Jose E. Marchesi  <jemarch@gnu.org>

	* DEV-NEWS: New file.
	* HACKING (Recording noteworthy development changes): New section.

2020-10-25  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.h: Rename pvm_type_equal to pvm_type_equal_p.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/pvm-val.c: Likewise.

2020-10-22  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* doc/poke.texi: output of `.info ios`commands: Add `Type` column.
	Minor tweaks to make them consistent.
	* doc/poke.texi (From Bytes to Integers): Remove the description of
	little-endian integers.
	* HACKING (Appendix): Fix `pk-utils.[ch]` paths.

2020-10-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/ios-dev-stream.c (ios_dev_stream_close): Free buffer only
	in read mode.
	* libpoke/ios-buffer.h (ios_buffer_free): Change return type to void.
	* libpoke/ios-buffer.c (ios_buffer_free): Handle buffer == NULL.

2020-10-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/ios-dev-stream.c: Add missing include "pk-utils.h".

2020-10-19  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/poke.mi-json/pk_int.json: Add new line at the end.
	* testsuite/poke.mi-json/pk_uint.json: Likewise.